# Hands-On-Software-Engineering-with-Python-Second-Edition

./: .gitignore  Pipfile  README.md  setup.cfg
CH01-code/: README.md  pyproject.toml
CH01-code/claude-example/: create_project_structure.py
CH01-code/claude-example/hms-core-project/: Makefile  Pipfile  README.md  pyproject.toml
CH01-code/claude-example/hms-core-project/src/hms/: __init__.py
CH01-code/claude-example/hms-core-project/src/hms/core/: __init__.py
CH01-code/claude-example/hms-core-project/tests/integration/test_hms/test_core/: __init__.py
CH01-code/claude-example/hms-core-project/tests/system/test_hms/test_core/: __init__.py
CH01-code/claude-example/hms-core-project/tests/unit/test_hms/test_core/: __init__.py  test_example.py
CH01-code/code-gpt-example/: Makefile  Pipfile
CH01-code/code-gpt-example/src/hms/core/: __init__.py  data_object.py
CH01-code/code-gpt-example/tests/integration/: test_integration_sample.py
CH01-code/code-gpt-example/tests/system/: test_system_sample.py
CH01-code/code-gpt-example/tests/unit/test_hms/test_core/: test_sample.py
CH02-code/: README.md  resource-grid-class-diagram.puml
CH03-code/: README.md
CH04-code/: README.md
CH05-code/: README.md  functional-programming-program-example.py  object-oriented-program-example.py  procedural-program-example.py
CH06-code/: README.md  annotations_examples_30.py  annotations_examples_36.py  docstrings_example_REST.py  docstrings_example_basic.py  docstrings_example_epytext.py  docstrings_example_google.py  docstrings_example_numpydoc.py  function_indentation_examples.py  future_example.py  help_function_example.py  indentation_consistency_example.py  observability_logging_example.py  setup.cfg  type_checking_example_01.py  type_checking_example_02.py  typeguard_example_311.py
CH07-code/: README.md  annotations_examples_310.py  annotations_examples_311.py  annotations_examples_35.py  annotations_examples_37.py  annotations_examples_38.py  annotations_examples_39.py  class_with_type_checking_example.py  data_contract_function_example.py  dataclass_typechecked_example.py  no_future_example.py  property_decoration_example.py  type_checking_example_01.py  type_checking_example_02.py
CH08-code/: README.md  unit-test-examples.geany
CH08-code/ide-examples/geany-examples/poetry/example_project/: pyproject.toml
CH08-code/ide-examples/geany-examples/poetry/example_project/example_project/: main.py
CH08-code/ide-examples/geany-examples/poetry/example_project/tests/: test_main.py
CH08-code/ide-examples/pycharm-examples/poetry/example_project/: pyproject.toml
CH08-code/ide-examples/pycharm-examples/poetry/example_project/src/example_project/: main.py
CH09-code/: README.md
CH10-code/: Pipfile  README.md  setup.cfg
CH11-code/: README.md
CH18-code/common/: README.md  pyproject.toml
CH18-code/common/hms/: environment.py
CH18-code/common/hms/core/: data_objects.py
(+291 files in other folders)
