[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hms-core"
version = "0.1.0"
description = "An AI-generated example Python package for HMS core logic"
authors = [
  { name="AI Dev", email="ai@example.com" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]
